--- a/src/index.html
+++ b/src/index.html
@@ -3,135 +3,159 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Interactive LLM Chat Interface with Multi-line Input</title>
+        <title>LLM Chat</title>
+        <script src="/webui.js"></script>
         <style>
-            html,
-            body {
+            body,
+            html {
                 height: 100%;
                 margin: 0;
                 padding: 0;
                 font-family: Arial, sans-serif;
-            }
-            body {
-                display: flex;
-                flex-direction: column;
-            }
-            .chat-container {
-                flex-grow: 1;
-                display: flex;
-                flex-direction: column;
                 background-color: #f0f0f0;
-                height: 100vh;
             }
-            .chat-messages {
-                flex-grow: 1;
-                overflow-y: auto;
-                padding: 20px;
+            .container {
                 display: flex;
                 flex-direction: column;
+                height: 100%;
+                max-width: 800px;
+                margin: 0 auto;
+                padding: 20px;
+                box-sizing: border-box;
             }
-            .message {
-                margin-bottom: 10px;
-                padding: 10px;
-                border-radius: 8px;
-                max-width: 70%;
-                white-space: pre-wrap;
-                word-break: break-word;
+            h1 {
+                margin-top: 0;
             }
-            .user-message {
-                background-color: #007bff;
-                color: white;
-                align-self: flex-end;
-            }
-            .llm-message {
+            #chat-container {
+                flex-grow: 1;
                 background-color: white;
-                color: black;
-                align-self: flex-start;
-                border: 1px solid #ccc;
+                border-radius: 10px;
+                padding: 20px;
+                overflow-y: auto;
+                margin-bottom: 20px;
+                box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
             }
             .input-area {
                 display: flex;
-                padding: 20px;
-                background-color: white;
-                border-top: 1px solid #ccc;
+                gap: 10px;
             }
             #user-input {
                 flex-grow: 1;
                 padding: 10px;
-                border: 1px solid #ccc;
-                border-radius: 4px;
-                font-size: 16px;
+                border: 1px solid #ddd;
+                border-radius: 5px;
                 resize: vertical;
-                min-height: 40px;
-                max-height: 120px;
             }
-            #send-button {
+            #send-button,
+            #clear-button {
                 padding: 10px 20px;
-                background-color: #007bff;
+                background-color: #4caf50;
                 color: white;
                 border: none;
-                border-radius: 4px;
-                margin-left: 10px;
+                border-radius: 5px;
                 cursor: pointer;
-                font-size: 16px;
-                align-self: flex-end;
+            }
+            #clear-button {
+                background-color: #f44336;
+            }
+            .message {
+                margin-bottom: 10px;
+                padding: 10px;
+                border-radius: 5px;
+                white-space: pre-wrap;
+            }
+            .user-message {
+                background-color: #e6f2ff;
+                text-align: right;
+            }
+            .ai-message {
+                background-color: #f0f0f0;
             }
         </style>
     </head>
     <body>
-        <div class="chat-container">
-            <div class="chat-messages" id="chat-messages">
-                <div class="message llm-message">
-                    Hello! How can I assist you today?
-                </div>
-            </div>
+        <div class="container">
+            <h1>LLM Chat</h1>
+            <div id="chat-container"></div>
             <div class="input-area">
                 <textarea
                     id="user-input"
-                    placeholder="Type your message... (Shift+Enter for new line)"
+                    rows="3"
+                    placeholder="Type your message here..."
                 ></textarea>
-                <button id="send-button">Send</button>
+                <button id="send-button" onclick="sendMessage()">Send</button>
+                <button id="clear-button" onclick="clearChat()">Clear</button>
             </div>
         </div>
 
         <script>
-            const chatMessages = document.getElementById("chat-messages");
-            const userInput = document.getElementById("user-input");
-            const sendButton = document.getElementById("send-button");
-
-            function addMessage(message, isUser) {
-                const messageElement = document.createElement("div");
-                messageElement.classList.add("message");
-                messageElement.classList.add(
-                    isUser ? "user-message" : "llm-message",
-                );
-                messageElement.textContent = message;
-                chatMessages.appendChild(messageElement);
-                chatMessages.scrollTop = chatMessages.scrollHeight;
-            }
+            let currentAIMessage = null;
 
             function sendMessage() {
+                const userInput = document.getElementById("user-input");
                 const message = userInput.value.trim();
                 if (message) {
-                    addMessage(message, true);
+                    appendUserMessage(message);
                     userInput.value = "";
-                    userInput.style.height = "auto";
+                    sendMessageToAI(message);
                 }
             }
 
-            sendButton.addEventListener("click", sendMessage);
+            function appendUserMessage(content) {
+                appendMessage(content, "user-message");
+            }
 
-            userInput.addEventListener("keydown", (e) => {
-                if (e.key === "Enter" && !e.shiftKey) {
-                    e.preventDefault();
-                    sendMessage();
+            function startNewAIMessage() {
+                const chatContainer = document.getElementById("chat-container");
+                currentAIMessage = document.createElement("div");
+                currentAIMessage.classList.add("message", "ai-message");
+                chatContainer.appendChild(currentAIMessage);
+            }
+
+            function appendToAIMessage(content) {
+                if (currentAIMessage) {
+                    currentAIMessage.textContent += content;
+                    const chatContainer =
+                        document.getElementById("chat-container");
+                    chatContainer.scrollTop = chatContainer.scrollHeight;
                 }
-            });
+            }
 
-            userInput.addEventListener("input", function () {
-                this.style.height = "auto";
-                this.style.height = this.scrollHeight + "px";
-            });
+            function endAIMessage() {
+                currentAIMessage = null;
+            }
+
+            function appendMessage(content, className) {
+                const chatContainer = document.getElementById("chat-container");
+                const messageElement = document.createElement("div");
+                messageElement.classList.add("message", className);
+                messageElement.textContent = content;
+                chatContainer.appendChild(messageElement);
+                chatContainer.scrollTop = chatContainer.scrollHeight;
+            }
+
+            function showError(message) {
+                appendMessage("Error: " + message, "ai-message");
+            }
+
+            function clearChatUI() {
+                document.getElementById("chat-container").innerHTML = "";
+                currentAIMessage = null;
+            }
+
+            function clearChat() {
+                clearChatUI();
+                clearChatHistory();
+            }
+
+            document
+                .getElementById("user-input")
+                .addEventListener("keypress", function (e) {
+                    if (e.key === "Enter" && !e.shiftKey) {
+                        e.preventDefault();
+                        sendMessage();
+                    }
+                });
         </script>
     </body>
 </html>
